CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(OpenCV REQUIRED core highgui)
  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRECTORIES})
  
FIND_PACKAGE(CUDA REQUIRED)
  INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})


FIND_PACKAGE(OpenGL REQUIRED)
  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

  
add_executable(main main.cpp)
  TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS} OpenGL32)